# cmake_playground

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c
